# bouncy

./: .gitignore  LICENSE  README.md  camera.gdns  main.tscn  player.tscn  project.godot  wall.tscn
images/: player_body.png.import  player_eye.png.import
native/: CMakeLists.txt  bouncy.gdnlib  camera.cpp  camera.h  processing.cpp  processing.h  wrapper.c
scripts/: Camera.gd  Gameplay.gd  Player.gd  Shadow.gd
